<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VerifikasiGantiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukan_kode_verifikasi"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kode_verifikasi_telah_dikirimkan_ke_email_anda"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <com.chaos.view.PinView
        android:id="@+id/pv_code"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:cursorVisible="true"
        android:hint="@string/tv_kode"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cursorColor="@color/colorPrimaryDark"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="40dp"
        app:itemRadius="4dp"
        app:itemSpacing="10dp"
        app:itemWidth="40dp"
        app:lineColor="@color/colorPrimaryDark"
        app:lineWidth="2dp"
        app:viewType="rectangle" />

    <Button
        android:id="@+id/btn_verifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_primary"
        android:text="@string/verifikasi"
        android:textAllCaps="false"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/tv_tunggu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_detik"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tunggu"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_detik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_120"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_kirim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/detik_untuk_mengirim_ulang"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />



    </LinearLayout>



    <Button
        android:id="@+id/btn_kirim_ulang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_primary"
        android:text="@string/kirim_ulang"
        android:textAllCaps="false"
        android:textColor="#fff" />


</LinearLayout>