<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment"
    android:background="@drawable/backgroun_homes"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lengkapi_profil_kamu"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/untuk_mempermudah_kami_melayani_kamu_dengan_lebih_baik"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/paper"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/iv_papar" />

    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/lengkapi_profile"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        />


</LinearLayout>