<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/icon"
            android:padding="20dp"
            android:src="@drawable/icon_dokter_girl" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/konsultasikan"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/ingin_berkonsultasi"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/masuk_dengan_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>


</ScrollView>